--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "monolog/monolog": "1.6.*",
-        "aws/aws-sdk-php": "2.*"
+        "php": ">=5.3.27",
+        "monolog/monolog": "1.6.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
