Final(?) compat issue

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "phlask/phlask",
     "type": "library",
     "homepage": "http://github.com/nicktacular/phlask",
-    "time": "2014-02-19",
+    "time": "2014-03-17 20:40:00",
     "license": "MIT",
     "version": "v0.1.0-alpha",
     "authors": [
