--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,10 @@
     "name": "phlask/phlask",
     "type": "library",
     "homepage": "http://github.com/nicktacular/phlask",
-    "time": "2014-03-17 20:40:00",
+    "time": "2014-03-17 20:50:00",
     "license": "MIT",
-    "version": "v0.1.0-alpha",
+    "version": "v0.1.2-alpha",
+    "description": "PHP parallel task management.",
     "authors": [
         {
             "name": "Nick Ilyin",
