--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
 
 script:
   - phpunit --configuration phpunit.xml.dist --coverage-text
+  - ./signalHandlerRunner.sh
 
 notifications:
   email: false
